# dnf-plugin-lockfile

./: .gitignore  .packit.yaml  CMakeLists.txt  Dockerfile.nethack  README.md  build.sh  dnf-plugin-lockfile.spec  renovate.json  rpms-nethack.txt  tox.ini
plugins/: CMakeLists.txt  lockfile.py
